# statconvert

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml
docs/: admin-guide.md  cli.md  examples.md  formats.md  user-guide.md
statconvert/: __main__.py  cli.py  collection.py  context.py  converter.py  dataset.py  dataset_options.py  error_suggestions.py  exceptions.py  object_discovery.py  object_manifest.py  output_names.py  output_paths.py  registry.py  serialization.py  transformer.py  version.py
statconvert/backends/: arrow_backend.py  base.py  capabilities.py  csv_backend.py  excel_backend.py  excel_constraints.py  json_backend.py  objects.py  ods_backend.py  pyreadstat_backend.py  r_backend.py
statconvert/batch/: __init__.py  exceptions.py  execution.py  models.py  planning.py  reporting.py
statconvert/compare/: __init__.py  comparison.py  exceptions.py  models.py  reporting.py
statconvert/config/: __init__.py  execution.py  loading.py  models.py  templates.py  validation.py  writing.py
statconvert/inspection/: __init__.py  exceptions.py  gates.py  models.py  profiling.py  validation.py
statconvert/logging/: __init__.py  cli.py  context.py  diagnostics.py  exceptions.py  models.py  setup.py
statconvert/metadata/: __init__.py  adapters.py  dictionary.py  exporters.py  model.py  scripts.py  sidecar.py
statconvert/reporting/: __init__.py  exceptions.py  models.py  options.py  output.py  sections.py
statconvert/transformations/: __init__.py  base.py  cli_parsing.py  columns.py  exceptions.py  filtering.py  noop.py  pipeline.py  types.py  (+1 more)
(+17 files in other folders)
