[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "statconvert"
version = "0.2.0"
description = "CLI toolkit for converting, inspecting, validating, comparing and reporting statistical datasets."
authors = [
    { name = "Gijs Meex" },
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "typer>=0.12",
    "rich>=13",
    "openpyxl>=3.1",
    "xlsxwriter>=3.1",
    "xlrd>=2.0",
    "xlwt>=1.3",
    "pyreadstat>=1.2",
    "pyarrow>=14",
    "pyreadr>=0.5",
    "odfpy>=1.4",
]

[dependency-groups]
dev = [
    "build>=1.2",
    "pytest>=8",
    "ruff>=0.5",
]

[project.scripts]
statconvert = "statconvert.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["statconvert*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
